# neural-irt

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py  setup_env.sh
configs/: test-run.yaml
neural_irt/: inspect_run.py  lit_module.py  train.py  train_model.py
neural_irt/configs/: caimira.py  common.py
neural_irt/data/: README.md  collators.py  datasets.py  indexers.py
neural_irt/evals/: models.py
neural_irt/modeling/: base_model.py  base_models.py  caimira.py  caimira_fast.py  configs.py  layers.py  mirt.py
neural_irt/modelling/: caimira.py  configs.py
neural_irt/scripts/: train.py
neural_irt/utils/: config_utils.py  merge_utils.py  parser_utils.py
resources/tests/data/: tiny-test-agents.jsonl  tiny-test-query-embeds.pt  tiny-test-responses.jsonl
test_resources/data/: tiny-test-queries.jsonl  tiny-test-responses.jsonl
tests/data/: test_collators.py  test_indexers.py  test_irt_dataset.py
tests/modelling/: test_caimira_model.py  test_mirt_model.py
tests/utils/: test_config_utils.py  test_merge_utils.py
